item alignments and bug fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ body {
 .search-box-container {
   background-color: rgba(255, 255, 255, 0.336);
   backdrop-filter: blur(5px);
-  padding: .5rem .5rem;
+  padding: 0.5rem 0.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -31,7 +31,7 @@ body {
   z-index: 9999;
 }
 
-.search-box-container > :first-child > div{ 
+.search-box-container > :first-child > div {
   width: 60px;
   height: 60px;
   border-radius: 50%;
@@ -39,14 +39,14 @@ body {
   /* border: 1px solid black; */
 }
 
-.search-box-container > :first-child > div > img{
+.search-box-container > :first-child > div > img {
   width: 100%;
   height: 100%;
 }
 
 .search-box-container input {
   flex-grow: 1;
-  padding: 1rem;
+  padding: 1rem 0 1rem 1rem;
   border-radius: 4rem;
   border: none;
   border: 1px solid rgba(0, 0, 0, 0.397);
@@ -63,6 +63,7 @@ body {
   font-weight: bold;
   font-size: 38px;
   cursor: pointer;
+  margin-right: 1rem;
   transition: scale 0.65s, background-color 0.15s;
   /* border: 1px solid red; */
 }
@@ -75,12 +76,13 @@ body {
 .container {
   /* background-color: crimson; */
   /* width: 100%; */
-  margin: 2rem;
+  margin: 1rem;
   overflow-x: scroll;
+  padding: 1rem;
 }
 
-.container h1{
-    font-size: 2rem;
+.container h1 {
+  font-size: 2rem;
 }
 
 .india-popular-places-weather,
@@ -102,6 +104,11 @@ body {
   background-repeat: no-repeat;
   border-radius: 20px;
   overflow: hidden;
+  transition: scale 0.15s;
+}
+
+.weather-card:hover{
+  scale: 1.05;
 }
 
 .weather-card::after {
@@ -129,8 +136,18 @@ body {
 }
 
 .city-name-time h1 {
-  font-size: 34px;
-  margin-top: 2px;
+  font-size: 2.4rem;
+  margin-top: 1.4px;
+}
+
+.city-name-time h1 > span {
+  font-size: 1.4rem;
+  margin-left: 0.5rem;
+  color: rgb(197, 197, 197);
+}
+
+.city-name-time > :nth-child(3) {
+  font-size: 22px;
 }
 
 .temp {
@@ -144,18 +161,18 @@ body {
   z-index: 999;
 }
 
-.temp  p {
+.temp p {
   font-size: 4.4rem;
   font-weight: bold;
 }
 
-.temp p > sup{
-    font-size: 3rem;
-    color: rgb(224, 224, 224);
+.temp p > sup {
+  font-size: 3rem;
+  color: rgb(224, 224, 224);
 }
 
-.weather-icon{
-    font-size: 2.4rem;
+.weather-icon {
+  font-size: 2.4rem;
 }
 
 .humidity-wind-container {
@@ -164,47 +181,48 @@ body {
   z-index: 999;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 10px;
+  /* justify-content: center; */
+  gap: 1rem;
   color: white;
   margin-top: 1.1rem;
+  /* border: 1px solid yellow; */
 }
 
-/* .wind,
-.humidity {
-  border: 1px solid rgb(253, 253, 253);
-} */
-
-.humidity {
-  font-size: 1.6rem;
+.humidity,
+.wind {
+  font-size: 1.4rem;
   font-weight: bold;
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0.3rem;
+  justify-content: center;
+  color: white;
+  /* border: 1px solid red; */
+  flex-grow: 1;
+}
+
+.humidity :nth-child(1),
+.wind :nth-child(1) {
   color: rgb(184, 184, 184);
 }
 
-.humidity :nth-child(1) {
-  color: white;
-  font-size: 1.6rem;
-}
-
-.humidity :nth-child(2) {
-  font-size: 1.2rem;
-}
-
-
 @media screen and (max-width: 1330px) {
-    .india-popular-places-weather,
-    .world-polular-places-weather {
-      grid-template-columns: repeat(2, 1fr);
-    }
+  .india-popular-places-weather,
+  .world-polular-places-weather {
+    grid-template-columns: repeat(2, 1fr);
   }
-  
-  @media screen and (max-width: 880px) {
-      .india-popular-places-weather,
-      .world-polular-places-weather {
-        grid-template-columns: 1fr;
-      }
+}
 
-    }
+@media screen and (max-width: 880px) {
+  .india-popular-places-weather,
+  .world-polular-places-weather {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (max-width: 435px) {
+  .humidity,
+  .wind {
+    justify-content: space-between;
+  }
+}
